--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<div class="dcc-preloader">
 		<img src="img/preload.gif">
 		<div class="progress-bar">
-		    <div class="progress"></div>
-        </div>
-        <div class="progress-val text-center">0%</div>
+			<div class="progress"></div>
+		</div>
+		<div class="progress-val text-center">0%</div>
 		<div class="logo-preload"><img src="img/logo-preload.png"></div>
 	</div>
 	
@@ -455,15 +455,20 @@
 								<div class="team-content">
 
 									<div class="dragon dragon-bebek">
-										<a href="#dragon-bebek" class="dragon-btn">+</a>
+										<a href="#dragon-bebek" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/bebek.png" alt="">
-											<h4>Cips</h4>
+											<div class="details">
+											<h4>Chips</h4>
+											<p>Duck with banana.. that's it.. well it’s an affair, maybe we’ll tell you later about his background. Genius, arrogant and always have an evil plans makes people move away from him. He express his ingenuity by making an advanced tools to support all the plans he made. With all the advantages, Chips still need one thing to success “Luck" he doesn’t have it.</p>
+											<h6>Skills &amp; Special Attribute</h6>
+											<p>Rarest Species, Lack Luck Duck, Genius.</p>
+											</div>
 										</div>
 									</div>
 
 									<div class="dragon dragon-aji">
-										<a href="#dragon-aji" class="dragon-btn">+</a>
+										<a href="#dragon-aji" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/aji.png" alt="">
 											<div class="details">
@@ -477,7 +482,7 @@
 									</div>
 
 									<div class="dragon dragon-beny">
-										<a href="#dragon-beny" class="dragon-btn">+</a>
+										<a href="#dragon-beny" class="dragon-btn"></a>
 										<div class="popup-content">
 											<img src="img/dragoners/beny.png" alt="">
 											<div class="details">
@@ -491,7 +496,7 @@
 									</div>
 
 									<div class="dragon dragon-hana">
-										<a href="#dragon-hana" class="dragon-btn">+</a>
+										<a href="#dragon-hana" class="dragon-btn"></a>
 										<div class="popup-content">
 											<img src="img/dragoners/hana.png" alt="">
 											<div class="details">
@@ -505,7 +510,7 @@
 									</div>
 
 									<div class="dragon dragon-mizan">
-										<a href="#dragon-mizan" class="dragon-btn">+</a>
+										<a href="#dragon-mizan" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/mizan.png" alt="">
 											<div class="details">
@@ -519,7 +524,7 @@
 									</div>
 
 									<div class="dragon dragon-arie">
-										<a href="#dragon-arie" class="dragon-btn">+</a>
+										<a href="#dragon-arie" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/arie.png" alt="">
 											<div class="details">
@@ -533,7 +538,7 @@
 									</div>
 
 									<div class="dragon dragon-kun">
-										<a href="#dragon-kun" class="dragon-btn">+</a>
+										<a href="#dragon-kun" class="dragon-btn"></a>
 										<div class="popup-content open-bottom-left">
 											<img src="img/dragoners/kun.png" alt="">
 											<div class="details">
@@ -547,7 +552,7 @@
 									</div>
 
 									<div class="dragon dragon-frans">
-										<a href="#dragon-frans" class="dragon-btn">+</a>
+										<a href="#dragon-frans" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/frans.png" alt="">
 											<div class="details">
@@ -561,7 +566,7 @@
 									</div>
 
 									<div class="dragon dragon-mogri">
-										<a href="#dragon-mogri" class="dragon-btn">+</a>
+										<a href="#dragon-mogri" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/mogri.png" alt="">
 											<div class="details">
@@ -575,7 +580,7 @@
 									</div>
 
 									<div class="dragon dragon-dike">
-										<a href="#dragon-dike" class="dragon-btn">+</a>
+										<a href="#dragon-dike" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/dike.png" alt="">
 											<div class="details">
@@ -589,7 +594,7 @@
 									</div>
 
 									<div class="dragon dragon-acai">
-										<a href="#dragon-acai" class="dragon-btn">+</a>
+										<a href="#dragon-acai" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/acai.png" alt="">
 											<div class="details">
@@ -603,7 +608,7 @@
 									</div>
 
 									<div class="dragon dragon-jesslyn">
-										<a href="#dragon-jesslyn" class="dragon-btn">+</a>
+										<a href="#dragon-jesslyn" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/jesslyn.png" alt="">
 											<div class="details">
@@ -617,7 +622,7 @@
 									</div>
 
 									<div class="dragon dragon-iqbal">
-										<a href="#dragon-iqbal" class="dragon-btn">+</a>
+										<a href="#dragon-iqbal" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/iqbal.png" alt="">
 											<div class="details">
@@ -631,7 +636,7 @@
 									</div>
 
 									<div class="dragon dragon-fano">
-										<a href="#dragon-fano" class="dragon-btn">+</a>
+										<a href="#dragon-fano" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/fano.png" alt="">
 											<div class="details">
@@ -671,15 +676,20 @@
 								<div class="team-content">
 
 									<div class="dragon dragon-bear">
-										<a href="#dragon-bear" class="dragon-btn">+</a>
-										<div class="popup-content mascot-popup open-top-left">
+										<a href="#dragon-bear" class="dragon-btn"></a>
+										<div class="popup-content open-top-left">
 											<img src="img/dragoners/bear.png" alt="">
-											<h4>Coco</h4>
+											<div class="details">
+												<h4>Coco</h4>
+												<p>Coco is a lovely, cheerful and shopaholic bear who came from a wealthy family, raised in an urban environment makes Coco aware about style and fashions. With shopaholic attitude Coco still an independent girl, she don’t get a lot of money from her parent, so she works as an actress to fulfil her desire to shop.</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Talkative, Friendly, Attention Seeker, Magical Purse</p>
+											</div>
 										</div>
 									</div>
 
 									<div class="dragon dragon-rajiv">
-										<a href="#dragon-rajiv" class="dragon-btn">+</a>
+										<a href="#dragon-rajiv" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/rajiv.png" alt="">
 											<div class="details">
@@ -693,7 +703,7 @@
 									</div>
 
 									<div class="dragon dragon-diaz">
-										<a href="#dragon-diaz" class="dragon-btn">+</a>
+										<a href="#dragon-diaz" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/diaz.png" alt="">
 											<div class="details">
@@ -707,7 +717,7 @@
 									</div>
 
 									<div class="dragon dragon-asad">
-										<a href="#dragon-asad" class="dragon-btn">+</a>
+										<a href="#dragon-asad" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/asad.png" alt="">
 											<div class="details">
@@ -721,7 +731,7 @@
 									</div>
 
 									<div class="dragon dragon-arip">
-										<a href="#dragon-arip" class="dragon-btn">+</a>
+										<a href="#dragon-arip" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/arip.png" alt="">
 											<div class="details">
@@ -735,7 +745,7 @@
 									</div>
 
 									<div class="dragon dragon-corry">
-										<a href="#dragon-corry" class="dragon-btn">+</a>
+										<a href="#dragon-corry" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/corry.png" alt="">
 											<div class="details">
@@ -749,7 +759,7 @@
 									</div>
 
 									<div class="dragon dragon-cynthia">
-										<a href="#dragon-cynthia" class="dragon-btn">+</a>
+										<a href="#dragon-cynthia" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/cynthia.png" alt="">
 											<div class="details">
@@ -763,7 +773,7 @@
 									</div>
 
 									<div class="dragon dragon-awe">
-										<a href="#dragon-awe" class="dragon-btn">+</a>
+										<a href="#dragon-awe" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/awe.png" alt="">
 											<div class="details">
@@ -777,7 +787,7 @@
 									</div>
 
 									<div class="dragon dragon-borton">
-										<a href="#dragon-borton" class="dragon-btn">+</a>
+										<a href="#dragon-borton" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/borton.png" alt="">
 											<div class="details">
@@ -791,7 +801,7 @@
 									</div>
 
 									<div class="dragon dragon-yori">
-										<a href="#dragon-yori" class="dragon-btn">+</a>
+										<a href="#dragon-yori" class="dragon-btn"></a>
 										<div class="popup-content open-bottom-left">
 											<img src="img/dragoners/yori.png" alt="">
 											<div class="details">
@@ -805,7 +815,7 @@
 									</div>
 
 									<div class="dragon dragon-stephanie">
-										<a href="#dragon-stephanie" class="dragon-btn">+</a>
+										<a href="#dragon-stephanie" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/stephanie.png" alt="">
 											<div class="details">
@@ -819,7 +829,7 @@
 									</div>
 
 									<div class="dragon dragon-aci">
-										<a href="#dragon-aci" class="dragon-btn">+</a>
+										<a href="#dragon-aci" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/aci.png" alt="">
 											<div class="details">
@@ -833,7 +843,7 @@
 									</div>
 
 									<div class="dragon dragon-vic">
-										<a href="#dragon-vic" class="dragon-btn">+</a>
+										<a href="#dragon-vic" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/vic.png" alt="">
 											<div class="details">
@@ -847,7 +857,7 @@
 									</div>
 
 									<div class="dragon dragon-mega">
-										<a href="#dragon-mega" class="dragon-btn">+</a>
+										<a href="#dragon-mega" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/mega.png" alt="">
 											<div class="details">
@@ -861,7 +871,7 @@
 									</div>
 
 									<div class="dragon dragon-rudy">
-										<a href="#dragon-rudy" class="dragon-btn">+</a>
+										<a href="#dragon-rudy" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/rudy.png" alt="">
 											<div class="details">
@@ -875,7 +885,7 @@
 									</div>
 
 									<div class="dragon dragon-vinza">
-										<a href="#dragon-vinza" class="dragon-btn">+</a>
+										<a href="#dragon-vinza" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/vinza.png" alt="">
 											<div class="details">
@@ -889,7 +899,7 @@
 									</div>
 
 									<div class="dragon dragon-fadli">
-										<a href="#dragon-fadli" class="dragon-btn">+</a>
+										<a href="#dragon-fadli" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/fadli.png" alt="">
 											<div class="details">
@@ -903,7 +913,7 @@
 									</div>
 
 									<div class="dragon dragon-adit">
-										<a href="#dragon-adit" class="dragon-btn">+</a>
+										<a href="#dragon-adit" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/adit.png" alt="">
 											<div class="details">
@@ -943,9 +953,9 @@
 								<div class="team-content">
 
 									<div class="dragon dragon-van">
-										<a href="#dragon-van" class="dragon-btn">+</a>
+										<a href="#dragon-van" class="dragon-btn"></a>
 										<div class="popup-content">
-											<img src="img/dragoners/cat.png" alt="">
+											<img src="img/dragoners/van.png" alt="">
 											<div class="details">
 												<h4>Ervandra Halim</h4>
 												<h5>S.W.A.G Team Leader</h5>
@@ -957,15 +967,20 @@
 									</div>
 
 									<div class="dragon dragon-cat">
-										<a href="#dragon-cat" class="dragon-btn">+</a>
-										<div class="popup-content mascot-popup open-top-right">
+										<a href="#dragon-cat" class="dragon-btn"></a>
+										<div class="popup-content open-top-right">
 											<img src="img/dragoners/cat.png" alt="">
-											<h4>Cookie</h4>
+											<div class="details">
+												<h4>Cookie</h4>
+												<p>Eeeee… It’s not a hat, it's a fish, his best companion, we’ll let you know latter. Experience makes Cookie become a wise cat, he can not refuse people wishes, his love to help people often mistaken and makes him look like a slavish cat. But he doesn’t care about it, he still positive and sincere.</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Heroic, Meditation Master, Loyal.</p>
+											</div>
 										</div>
 									</div>
 
 									<div class="dragon dragon-daniel">
-										<a href="#dragon-daniel" class="dragon-btn">+</a>
+										<a href="#dragon-daniel" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/daniel.png" alt="">
 											<div class="details">
@@ -979,7 +994,7 @@
 									</div>
 
 									<div class="dragon dragon-hendra">
-										<a href="#dragon-hendra" class="dragon-btn">+</a>
+										<a href="#dragon-hendra" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/hendra.png" alt="">
 											<div class="details">
@@ -993,7 +1008,7 @@
 									</div>
 
 									<div class="dragon dragon-imam">
-										<a href="#dragon-imam" class="dragon-btn">+</a>
+										<a href="#dragon-imam" class="dragon-btn"></a>
 										<div class="popup-content">
 											<img src="img/dragoners/imam.png" alt="">
 											<div class="details">
@@ -1007,7 +1022,7 @@
 									</div>
 
 									<div class="dragon dragon-opan">
-										<a href="#dragon-opan" class="dragon-btn">+</a>
+										<a href="#dragon-opan" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/opan.png" alt="">
 											<div class="details">
@@ -1021,7 +1036,7 @@
 									</div>
 
 									<div class="dragon dragon-akung">
-										<a href="#dragon-akung" class="dragon-btn">+</a>
+										<a href="#dragon-akung" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/akung.png" alt="">
 											<div class="details">
@@ -1035,7 +1050,7 @@
 									</div>
 
 									<div class="dragon dragon-ali">
-										<a href="#dragon-ali" class="dragon-btn">+</a>
+										<a href="#dragon-ali" class="dragon-btn"></a>
 										<div class="popup-content">
 											<img src="img/dragoners/ali.png" alt="">
 											<div class="details">
@@ -1049,7 +1064,7 @@
 									</div>
 
 									<div class="dragon dragon-jannes">
-										<a href="#dragon-jannes" class="dragon-btn">+</a>
+										<a href="#dragon-jannes" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/jannes.png" alt="">
 											<div class="details">
@@ -1063,7 +1078,7 @@
 									</div>
 
 									<div class="dragon dragon-donny">
-										<a href="#dragon-donny" class="dragon-btn">+</a>
+										<a href="#dragon-donny" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/donny.png" alt="">
 											<div class="details">
@@ -1077,7 +1092,7 @@
 									</div>
 
 									<div class="dragon dragon-agung">
-										<a href="#dragon-agung" class="dragon-btn">+</a>
+										<a href="#dragon-agung" class="dragon-btn"></a>
 										<div class="popup-content open-bottom-right">
 											<img src="img/dragoners/agung.png" alt="">
 											<div class="details">
@@ -1091,7 +1106,7 @@
 									</div>
 
 									<div class="dragon dragon-tom">
-										<a href="#dragon-tom" class="dragon-btn">+</a>
+										<a href="#dragon-tom" class="dragon-btn"></a>
 										<div class="popup-content open-top-right">
 											<img src="img/dragoners/tom.png" alt="">
 											<div class="details">
@@ -1105,7 +1120,7 @@
 									</div>
 
 									<div class="dragon dragon-yoel">
-										<a href="#dragon-yoel" class="dragon-btn">+</a>
+										<a href="#dragon-yoel" class="dragon-btn"></a>
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/yoel.png" alt="">
 											<div class="details">
@@ -1119,7 +1134,7 @@
 									</div>
 
 									<div class="dragon dragon-erick">
-										<a href="#dragon-erick" class="dragon-btn">+</a>
+										<a href="#dragon-erick" class="dragon-btn"></a>
 										<div class="popup-content open-bottom-left">
 											<img src="img/dragoners/erick.png" alt="">
 											<div class="details">
@@ -1158,9 +1173,6 @@
 									<div class="centered-content" id="lobby-content">
 										<div class="content">
 											<h2>Start the future now!</h2>
-											<div class="skip-container">
-												<a href="#skip" class="skip-typed-button">Skip This <span class="fa fa-fast-forward"></span></a>
-											</div>
 											<div class="normal-typed">
 												<p><span class="paragraph"></span></p>
 											</div>
@@ -1175,6 +1187,10 @@
 										</div>
 
 									</div>
+
+								</div>
+								<div class="skip-container">
+									<a href="#skip" class="skip-typed-button">Skip This <span class="fa fa-fast-forward"></span></a>
 								</div>
 
 							</div>
@@ -1201,6 +1217,7 @@
 	<script type="text/javascript" src="js/iscroll.js"></script>
 	<script type="text/javascript" src="js/typed.min.js"></script>
 	<script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
+	<script type="text/javascript" src="js/perfect-scrollbar.jquery.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
