--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
 
 								</div>
 								<div class="skip-container">
-									<a href="#skip" class="skip-typed-button">Skip This <span class="fa fa-fast-forward"></span></a>
+									<a href="#skip" class="skip-typed-button">Skip Intro <span class="fa fa-fast-forward"></span></a>
 								</div>
 
 							</div>
