--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@
 								<div class="rocket-holder">
 									<div class="rocket">
 										<div class="rocket-body"><img src="img/rocket.png"></div>
-										<div class="rocket-smoke"></div>
+										<div class="rocket-fire"><div class="fire-animation"></div></div>
+										<div class="rocket-smoke"><div class="smoke-animation"></div></div>
 										<a href="#dcc-outspace" class="btn-launch rippling"><span><img src="img/launch-button.png" alt="Launch Now"></span></a>
 									</div>
 								</div>
@@ -462,10 +463,10 @@
 										<div class="popup-content open-top-left">
 											<img src="img/dragoners/bebek.png" alt="">
 											<div class="details">
-											<h4>Chips</h4>
-											<p>Duck with banana.. that's it.. well it’s an affair, maybe we’ll tell you later about his background. Genius, arrogant and always have an evil plans makes people move away from him. He express his ingenuity by making an advanced tools to support all the plans he made. With all the advantages, Chips still need one thing to success “Luck" he doesn’t have it.</p>
-											<h6>Skills &amp; Special Attribute</h6>
-											<p>Rarest Species, Lack Luck Duck, Genius.</p>
+												<h4>Chips</h4>
+												<p>Duck with banana.. that's it.. well it’s an affair, maybe we’ll tell you later about his background. Genius, arrogant and always have an evil plans makes people move away from him. He express his ingenuity by making an advanced tools to support all the plans he made. With all the advantages, Chips still need one thing to success “Luck" he doesn’t have it.</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Rarest Species, Lack Luck Duck, Genius.</p>
 											</div>
 										</div>
 									</div>
@@ -753,7 +754,7 @@
 											<img src="img/dragoners/corry.png" alt="">
 											<div class="details">
 												<h4>Corry Salim</h4>
-												<h5>VP of Random Thinks</h5>
+												<h5>Dot Connector</h5>
 												<p>A fresh designer in the world of creative and digital industry. His task is to be the vessel of ideas from around him, and turn them into concepts based on users' necessity. He likes to observe people and life, searching for pattern and asking questions. Outside the office hour, he is a runner and a reader. A few of his favorite things are fringes, wigs, and weird stuff.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>Junior Polymath, Growth Mindset, Newbie Listener & Stress Lover</p>
@@ -1203,6 +1204,7 @@
 							<div class="drag-next draggie"><span class="fa fa-angle-right"></span></div>
 						</div>
 					</div>
+					
 				</div>
 
 			</div>
@@ -1216,6 +1218,8 @@
 	</footer>
 
 	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/foundation.js"></script>
+	<script type="text/javascript" src="js/foundation.reveal.js"></script>
 	<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
 	<script type="text/javascript" src="js/iscroll.js"></script>
 	<script type="text/javascript" src="js/typed.min.js"></script>
