--- a/index.html
+++ b/index.html
@@ -417,6 +417,10 @@
 							<div class="drag-prev draggie"><span class="fa fa-angle-left"></span></div>
 							<div class="drag-next draggie"><span class="fa fa-angle-right"></span></div>
 						</div>
+						<div class="drag-nav drag-nav-outspace-mobile">
+							<div class="drag-prev draggie"><span class="fa fa-angle-left"></span></div>
+							<div class="drag-next draggie"><span class="fa fa-angle-right"></span></div>
+						</div>
 					</div>
 				</div>
 				
