--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 	
 	<div class="dcc-preloader">
 		<div class="dp-animate"><img src="img/preload.gif"></div>
-        <div class="dp-container">
-            <div class="dp-progress">
-                <div class="dp-progressback"></div>
-                <div class="dp-progressfront"></div>
-                <div class="dp-logo"><img src="img/logo-preload.png"></div>
-            </div>
-            <div class="dp-progressval text-center">0%</div>
-        </div>
+		<div class="dp-container">
+			<div class="dp-progress">
+				<div class="dp-progressback"></div>
+				<div class="dp-progressfront"></div>
+				<div class="dp-logo"><img src="img/logo-preload.png"></div>
+			</div>
+			<div class="dp-progressval text-center">0%</div>
+		</div>
 	</div>
 	
 	<header id="header">		
@@ -76,7 +76,7 @@
 				<div class="predcc-zeppelin">
 					<div class="front-zeppelin">
 						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin"></div>
-						<div class="zep-led"><a href="#"><img src="img/zep-led.jpg" alt="LED"></a></div>
+						<div class="zep-led"><a href="http://v1.dragoncapital.center/" title="Dragon Capital Center"><span class="monitor"></span></a></div>
 					</div>
 					<div class="back-zeppelin">
 						<img src="img/back-zeppelin.png" alt="Zeppelin">
