--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="dcc-page" id="dcc-intro">
 			<div id="dcc-home">
 				<div class="dcc-building">
-					<div class="dragon-building"><img src="img/dcc-building.jpg" data-hq="dcc-building-hq.jpg" alt="Dragon Building" class="bg-lq"></div>
+					<div class="dragon-building"><img data-src="img/dcc-building.jpg" data-hq="dcc-building-hq.jpg" data-medium="img/dcc-building-1440.jpg" data-tablet="img/dcc-building-1024.jpg" data-mobile="img/dcc-building-640.jpg" alt="Dragon Building" class="bg-lq"></div>
 					<div class="dcc-plank">
 						<a href="#start" class="start-now">
 							<span class="off"><img src="img/start-a.jpg" alt="Click To Play"></span>
@@ -98,7 +98,7 @@
 					<div class="sub-preloader" id="preload-outspace"><span>50%</span></div>
 					<div class="dcc-draggable" id="dcc-outspace">
 						<div class="draggable draggable-normal">
-							<div class="drag-background"><img data-src="img/outspace.jpg" data-hq="img/outspace-hq.jpg" alt="Outspace" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/outspace.jpg" data-hq="img/outspace-hq.jpg" data-medium="img/outspace-800.jpg" data-tablet="img/outspace-600.jpg" data-mobile="img/outspace-400.jpg" alt="Outspace" class="bg-lq"></div>
 							<div class="drag-content">
 								<div id="planet-scene">
 									<div class="layer" data-depth="0.40">
@@ -437,7 +437,7 @@
 					<div class="sub-preloader" id="preload-rooftop"><span>50%</span></div>
 					<div class="dcc-draggable" id="dcc-rooftop">
 						<div class="draggable draggable-normal">
-							<div class="drag-background"><img data-src="img/rooftop.jpg" data-hq="img/rooftop-hq.jpg" alt="Rooftop" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/rooftop.jpg" data-hq="img/rooftop-hq.jpg" data-medium="img/rooftop-800.jpg" data-tablet="img/rooftop-600.jpg" data-mobile="img/rooftop-400.jpg" alt="Rooftop" class="bg-lq"></div>
 							<div class="drag-content">
 								<div class="rooftop-content">
 									<p><span class="launcher-content"></span></p>
@@ -465,7 +465,7 @@
 					<div class="sub-preloader" id="preload-illustrator"><span>50%</span></div>
 					<div class="dcc-draggable" id="dcc-illustrator">
 						<div class="draggable draggable-wide">
-							<div class="drag-background"><img data-src="img/illustrator.jpg" data-hq="img/illustrator-hq.jpg" alt="Illustrator" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/illustrator.jpg" data-hq="img/illustrator-hq.jpg" data-medium="img/illustrator-800.jpg" data-tablet="img/illustrator-600.jpg" data-mobile="img/illustrator-400.jpg" alt="Illustrator" class="bg-lq"></div>
 							<div class="drag-content">
 								<div class="mascot-holder mascot-bebek">
 									<div class="mascot"></div>
@@ -686,7 +686,7 @@
 					<div class="sub-preloader" id="preload-creative"><span>50%</span></div>
 					<div class="dcc-draggable" id="dcc-creative">
 						<div class="draggable draggable-wide">
-							<div class="drag-background"><img data-src="img/creative.jpg" data-hq="img/creative-hq.jpg" alt="Creative" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/creative.jpg" data-hq="img/creative-hq.jpg" data-medium="img/creative-800.jpg" data-tablet="img/creative-600.jpg" data-mobile="img/creative-400.jpg" alt="Creative" class="bg-lq"></div>
 							<div class="drag-content">
 								<div class="mascot-holder mascot-bear">
 									<div class="mascot"></div>
@@ -963,7 +963,7 @@
 					<div class="sub-preloader" id="preload-developer"><span>50%</span></div>
 					<div class="dcc-draggable" id="dcc-developer">
 						<div class="draggable draggable-wide">
-							<div class="drag-background"><img data-src="img/developer.jpg" data-hq="img/developer-hq-opt.jpg" alt="Developer" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/developer.jpg" data-hq="img/developer-hq.jpg" data-medium="img/developer-800.jpg" data-tablet="img/developer-600.jpg" data-mobile="img/developer-400.jpg" alt="Developer" class="bg-lq"></div>
 							<div class="drag-content">
 								<div class="mascot-holder mascot-cat">
 									<div class="mascot"></div>
@@ -1101,7 +1101,7 @@
 											<img src="img/dragoners/donny.png" alt="">
 											<div class="details">
 												<h4>Donny Riantori</h4>
-												<h5>The Theorist</h5>
+												<h5>The Philosoper</h5>
 												<p>A lawyer alumni but fell in love with design and technology 15 years ago. His personal interests are all about live, social, law, music, and creative industry. Originated from a small, old-fashioned, but lovely town, Yogyakarta, he happily ended up here with us. His role is to play around with tons of codes and beauty to make cool apps.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>UX Expert, SEO, Advanced Coder, Logical Warrior, Thinker</p>
@@ -1183,7 +1183,7 @@
 				<div class="dcc-page">
 					<div class="dcc-draggable" id="dcc-lobby">
 						<div class="draggable draggable-normal">
-							<div class="drag-background"><img src="img/lobby.jpg" data-hq="img/lobby-hq.jpg" alt="Lobby" class="bg-lq"></div>
+							<div class="drag-background"><img data-src="img/lobby.jpg" data-hq="img/lobby-hq.jpg" data-medium="img/lobby-800.jpg" data-tablet="img/lobby-600.jpg" data-mobile="img/lobby-400.jpg" alt="Lobby" class="bg-lq"></div>
 							
 							<div class="drag-content">
 
