--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
 								<div class="lobby-assets">
 									<div class="centered-content" id="lobby-content">
 										<div class="content">
-											<h2>Start the future now!</h2>
+											<h2>The Future is on us.</h2>
 											<div class="normal-typed">
 												<p><span class="paragraph"></span></p>
 											</div>
