--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 		</div>
 	</div>
 	
+       <div class="watchus-popup">
+        <div class="wp-wrapper">
+            <div class="wp-container">
+            </div>
+        </div>
+    </div>
+	
 	<header id="header">		
 		<div class="logo"><a href="http://www.dragoncapital.center/" title="Dragon Capital Center"><img src="img/logo.png" alt="Dragon Capital Center"></a></div>
 		<div class="mainmenu">
