--- a/index.html
+++ b/index.html
@@ -35,13 +35,6 @@
 		</div>
 	</div>
 	
-       <div class="watchus-popup">
-        <div class="wp-wrapper">
-            <div class="wp-container">
-            </div>
-        </div>
-    </div>
-	
 	<header id="header">		
 		<div class="logo"><a href="http://www.dragoncapital.center/" title="Dragon Capital Center"><img src="img/logo.png" alt="Dragon Capital Center"></a></div>
 		<div class="mainmenu">
@@ -1237,6 +1230,12 @@
 		<div class="nav up"><a href="#next"><span class="fa fa-chevron-up"></span></a></div>
 		<div class="nav down"><a href="#prev"><span class="fa fa-chevron-down"></span></a></div>
 	</footer>
+
+	<div class="watchus-popup">
+		<div class="wp-wrapper">
+			<div class="wp-container"></div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
